2010-02-17  John W. Eaton  <jwe@octave.org>

	* Makefile.am (libcruft_la_LIBADD): Include libranlib.la in the list.
	(noinst_LTLIBRARIES, libranlib_la_SOURCES, libranlib_la_DEPENDENCIES,
	libcruft_la_FFLAGS): New variables.
	(ranlib.def): New target.
	(DISTCLEANFILES): Also remove ranlib.def.
	* ranlib/module.mk (libranlib_la_SOURCES): Rename from
	libcruft_la_SOURCES.

2010-01-20  John W. Eaton  <jwe@octave.org>

	* misc/quit.cc: Untabify.

2010-01-20  John W. Eaton  <jwe@octave.org>

	* Makefile.am (EXTRA_DIST): Remove STOP.patch from the list.

2010-01-20  Jaroslav Hajek  <highegg@gmail.com>

	* misc/quit.h: Define inline-function variant of OCTAVE_QUIT in C++
	mode.

2009-01-13  Rik <octave@nomad.inbox5.com>

	* STOP.patch: Remove unmaintained patch for Fortran code

2009-01-13  Rik <octave@nomad.inbox5.com>

	* ranlib/advnst.f ranlib/genbet.f ranlib/genchi.f ranlib/genexp.f
	ranlib/genf.f ranlib/gengam.f ranlib/genmul.f ranlib/gennch.f
	ranlib/gennf.f ranlib/gennor.f ranlib/genunf.f ranlib/getcgn.f
	ranlib/getsd.f ranlib/ignbin.f ranlib/ignnbn.f ranlib/ignpoi.f
	ranlib/ignuin.f ranlib/initgn.f ranlib/mltmod.f ranlib/setant.f
	ranlib/setgmn.f ranlib/setsd.f: call XSTOPX instead of STOP so Octave's
	error handler can intercept errors in Fortran code

2010-01-07  Jaroslav Hajek  <highegg@gmail.com>

	* misc/quit.cc (octave_rethrow_exception): Set octave_interrupt_state
	to -1 when throwing octave_interrupt_exception.

2010-01-05  John W. Eaton  <jwe@octave.org>

	* Makefile.am (AM_CPPFLAGS): New variable.

2009-12-31  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Reverse using simple_move_if_change_rule for cruft.def
	which interferes with make timestamp algorithm.

2009-12-19  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Eliminate TOPDIR variable in favor of built-in automake
	variables of top_builddir and top_srcdir.

2009-12-13  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Use simple_move_if_change_rule for cruft.def to eliminate