@@ -34,7 +34,8 @@ libcruft_la_FFLAGS = $(F77_INTEGER_8_FLAG)
 libcruft_la_CPPFLAGS = @CRUFT_DLL_DEFS@
 
 libcruft_la_LDFLAGS = \
-  -release $(version) $(NO_UNDEFINED_LDFLAG) @XTRA_CRUFT_SH_LDFLAGS@
+  -release $(version) $(NO_UNDEFINED_LDFLAG) @XTRA_CRUFT_SH_LDFLAGS@ \
+  -bindir $(bindir)
 
 libcruft_la_LIBADD = libranlib.la $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS)
 
