@@ -1,3 +1,8 @@
+2010-02-21  Michael Goffioul  <michael.goffioul@gmail.com>
+
+	* Makefile.am: Add -bindir flag to liboctinterp_la_LDFLAGS. Remove
+	temporary libtool module file after copying oct file.
+
 2010-02-19  John W. Eaton  <jwe@octave.org>
 
 	* DLD-FUNCTIONS/qr.cc: Increase tolerance for test.
