@@ -1,3 +1,7 @@
+2010-02-21  Michael Goffioul  <michael.goffioul@gmail.com>
+
+	* Makefile.am: Add -bindir option to libcruft_la_LDFLAGS.
+
 2010-02-17  John W. Eaton  <jwe@octave.org>
 
 	* Makefile.am (libcruft_la_LIBADD): Include libranlib.la in the list.
